--- a/code/rei_data.ipynb
+++ b/code/rei_data.ipynb
@@ -2,10 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
+    "#modules\n",
     "import matplotlib.pyplot as plt\n",
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -15,17 +16,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
+    "#read csv\n",
     "rei_data=pd.read_csv('../clean_data/rei_data.csv')\n",
     "total_annual = pd.read_csv('../clean_data/total_annual.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -42,6 +44,7 @@
     }
    ],
    "source": [
+    "#showing this plot again, copied from top_parks code file\n",
     "x_axis=total_annual['Year']\n",
     "y_axis=total_annual['RecreationVisitsTotal']\n",
     "plt.figure(figsize=(10,7))\n",
@@ -58,13 +61,13 @@
     "plt.annotate('68,064,224',(2013.5,67864224),color='red')\n",
     "plt.annotate('70,168,104',(2000.7,68768104),color='red')\n",
     "\n",
-    "plt.savefig(\"../plots/total_annual_visits.png\")\n",
+    "#plt.savefig(\"../plots/total_annual_visits.png\")\n",
     "plt.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -275,12 +278,13 @@
        "18  2019         7000000   21969000.0   3123  1.407748e+09"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "#divide sales numbers by 1 million to get les digits\n",
     "rei_clean=rei_data.copy()\n",
     "rei_clean['sales']=round(rei_clean['sales'].div(1000000)).astype(int)\n",
     "#rei_clean['active_members']=round(rei_clean['active_members'].div(1000)).astype(int)\n",
@@ -289,10 +293,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
+    "#x and y axis values for the following charts\n",
+    "\n",
     "member_2001=rei_clean.loc[(rei_clean['year']  <= 2013),'active_members']\n",
     "sales_2001=rei_clean.loc[(rei_clean['year']  <= 2013),'sales']\n",
     "year_2001=rei_clean.loc[(rei_clean['year']  <= 2013),'year']\n",
@@ -304,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -321,6 +327,7 @@
     }
    ],
    "source": [
+    "#yearly sales for REI with linear regression\n",
     "rei_x=rei_clean['year']\n",
     "rei_y=rei_clean['sales']\n",
     "plt.figure(figsize=(10,7))\n",
@@ -360,6 +367,7 @@
     "plt.title('REI Sales (2001-2019)\\n')\n",
     "plt.axvline(x=2013,ls='--',color='blue',alpha=.25)\n",
     "\n",
+    "#this line formats y axis to comma number\n",
     "ax = plt.gca()\n",
     "ax.get_yaxis().set_major_formatter(plt.FuncFormatter(lambda x, loc: \"{:,}\".format(int(x))))\n",
     "\n",
@@ -370,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -387,6 +395,7 @@
     }
    ],
    "source": [
+    "#same plot but 2 seperate linear regressions before and after 2013\n",
     "plt.figure(figsize=(10,7))\n",
     "plt.yticks(np.arange(0,4500,200))\n",
     "plt.xticks(np.arange(2001,2020,1),rotation=90)\n",
@@ -415,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -432,6 +441,7 @@
     }
    ],
    "source": [
+    "#REI plot active membership with linear regression\n",
     "member_x=rei_clean['year']\n",
     "member_y=rei_clean['active_members']\n",
     "plt.figure(figsize=(10,7))\n",
